[tool.poetry]
name = "pubsub"
version = "0.0.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
kombu = "^5.2.3"
celery = "^5.2.3"

Flask = { version = "^2", optional = true}
Django = { version = "^3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
flask = ["Flask"]
django = ["Django"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37, py38, py39, py310

[tox:.package]
basepython = python3

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps =
    pytest
    pytest-cov
extras =
    Flask
commands = pytest  --cov=./ --cov-report=xml
"""