[tool.poetry]
name = "pubsub"
version = "0.0.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
kombu = ">= 4, < 6"
celery = ">= 4, < 6"

Flask = { version = "^2", optional = true}
Django = { version = "^4.2.15", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
flask = ["Flask"]
django = ["Django"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38, py39, py310, py311

[tox:.package]
basepython = python3

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps =
    pytest
    pytest-cov
extras =
    Flask
commands = pytest  --cov=./ --cov-report=xml
"""