[tool.poetry]
name = "pubsub"
version = "0.0.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
kombu = ">= 4, < 6"
celery = ">= 4, < 6"

Flask = { version = "^2.3.3", optional = true}
Django = { version = "^5.1.7", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-cov = "^6.0.0"

[tool.poetry.extras]
flask = ["Flask"]
django = ["Django"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310, py311, py312, py313

[tox:.package]
basepython = python3

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
deps =
    pytest
    pytest-cov
extras =
    Flask
commands = pytest  --cov=./ --cov-report=xml
"""